--- a/src/components/SwapHistory/SwapBox.css
+++ b/src/components/SwapHistory/SwapBox.css
@@ -66,7 +66,7 @@
 
 .swap-box-arrow {
   flex-shrink: 0;
-  font-size: 16px;
+  font-size: 20px;
   opacity: 0.55;
 }
 
